--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@acab/reset.css": "^0.10.0",
+    "@fontsource-variable/noto-sans-jp": "^5.1.0",
     "astro": "^4.16.13"
   }
 }
