--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "@acab/reset.css": "^0.10.0",
+    "@astrojs/preact": "^3.5.4",
     "@fontsource-variable/noto-sans-jp": "^5.1.0",
-    "astro": "^4.16.13"
+    "astro": "^4.16.13",
+    "preact": "^10.25.0"
   }
 }
