--- a/package.json
+++ b/package.json
@@ -12,8 +12,22 @@
   "dependencies": {
     "@acab/reset.css": "^0.11.0",
     "@astrojs/preact": "^3.5.4",
+    "@astrojs/react": "^3.6.3",
+    "@astrojs/tailwind": "^5.1.2",
     "@fontsource-variable/noto-sans-jp": "^5.1.0",
+    "@radix-ui/react-navigation-menu": "^1.2.1",
+    "@radix-ui/react-slot": "^1.1.0",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
     "astro": "^4.16.16",
-    "preact": "^10.25.0"
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.462.0",
+    "preact": "^10.25.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "tailwind-merge": "^2.5.5",
+    "tailwindcss": "^3.4.15",
+    "tailwindcss-animate": "^1.0.7"
   }
 }
